--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# Puerto de Ejecucion
+server.port=9090
 
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/MEDISCAN
+spring.datasource.username=root
+spring.datasource.password=Ar2098urd
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+##Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
