Añadido nuevas funciones para heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.port=9090
 
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/MEDISCAN
-spring.datasource.username=root
-spring.datasource.password=Ar2098urd
+spring.datasource.url=jdbc:postgresql://ec2-44-213-151-75.compute-1.amazonaws.com/d3tro1vq9tot54
+spring.datasource.username=kdlauftzbjkifk
+spring.datasource.password=5432
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
