--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.settings/
+.nvm/
 
 ### STS ###
 .apt_generated
